<?xml version="1.0"?>
<package>
  <name>fidget</name>
  <version>0.0.1</version>
  <description>The jaco_demo package</description>

  <author email="braden@stenning.com">Braden Stenning</author>
  <maintainer email="ibaranov@clearpathrobotics.com">Ilia Baranov (Clearpath)</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jaco_driver</build_depend>
  <build_depend>jaco_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>jaco_driver</run_depend>
  <run_depend>jaco_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>


</package>
