<?xml version="1.0"?>
<package>
  <name>dynamixel_arm</name>
  <version>0.0.1</version>
  <description>The dynamixel_arm package</description>

  <maintainer email="maxsvetlik@gmail.com">Maxwell J Svetlik</maintainer>
  <license>LGPLv3</license>
  <author email="maxsvetlik@gmail.com">Maxwell J Svetlik</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
